--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -2,6 +2,14 @@
 
 =encoding utf-8
 
+=head1 10.3.5
+
+=head2 Features
+
+=head3 Youtube link added
+
+Along with a Facebook Page, Twitter URL, and Google+ URL, you can now set a Youtube link
+
 =head1 10.3.4
 
 =head2 Focus
