Start this, but I'm going to merge with master before finishing...

--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -2,6 +2,12 @@
 
 =encoding utf-8
 
+=head1 10.5.1
+
+This is mostly a bug-fix release for issues found in the v10.5.0 release of Dada Mail. 
+
+
+
 =head1 10.5.0
 
 =head2 Features
