--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -2,6 +2,34 @@
 
 =encoding utf-8
 
+=head1 10.5.5
+
+This is mostly a bug-fix release for issues found in the v10.5.4 release of Dada Mail. 
+
+=head2 Bugfixes 
+
+=head3 CKEditor Config may have the wrong $PROGRAM_URL variable written in, causing problems with some features
+
+L<https://github.com/justingit/dada-mail/issues/673>
+
+=head3  Adding an address to any sublist (other than, "list") fails if mailing list is closed
+
+L<https://github.com/justingit/dada-mail/issues/672>
+
+=head3 Missing alt tag in opener tracking image 
+
+L<https://github.com/justingit/dada-mail/issues/675>
+
+=head3  Message Drafts saving broken for PostgreSQL
+
+L<https://github.com/justingit/dada-mail/issues/676>
+
+=head3 Core5Filemanager installation will fail because of wrongly named template file 
+
+L<https://github.com/justingit/dada-mail/issues/677>
+
+
+
 =head1 10.5.4
 
 This is mostly a bug-fix release for issues found in the v10.5.3 release of Dada Mail. 
